First working version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
     "target": "es2018",
     "module": "commonjs",
     "moduleResolution": "node",
+    // "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "outDir": "dist",
+    "sourceMap": true,
 
     "jsx": "react",
     "jsxFactory": "JSX.createElement",
