--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "typedoc-custom-theme-demo",
-  "version": "1.0.0",
+  "name": "typedoc-theme-oxide",
+  "version": "0.1.2",
   "main": "dist/index.js",
-  "repository": "git@github.com:Gerrit0/typedoc-custom-theme-demo.git",
-  "author": "Gerrit Birkeland <gerrit@gerritbirkeland.com>",
+  "repository": "github:balthild/typedoc-theme-oxide",
+  "author": "Balthild <ibalthild@gmail.com>",
   "license": "MIT",
   "keywords": [
-    "typedoc-theme"
+    "rustdoc",
+    "typedoc",
+    "typedoc-theme",
+    "typescript"
   ],
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.11"
+  },
   "devDependencies": {
-    "typedoc": "^0.22.9",
-    "typescript": "^4.4.4"
+    "@types/node": "^17.0.42",
+    "clean-css": "^5.3.0",
+    "typedoc": "^0.22.17",
+    "typescript": "^4.7.3",
+    "undici": "^5.5.1"
   },
   "peerDependencies": {
-    "typedoc": "^0.22.9"
+    "typedoc": "^0.22.17"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "node scripts/retrieve-assets.js && rm -rf dist && tsc",
     "predocs": "tsc",
-    "docs": "typedoc src --plugin dist/index.js"
-  }
+    "docs": "typedoc src --plugin ./dist/index.js --theme oxide --out docs",
+    "prepublishOnly": "yarn build"
+  },
+  "files": [
+    "dist",
+    "assets"
+  ]
 }
