--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typedoc-theme-oxide",
-  "version": "0.1.2",
+  "version": "0.1.3",
+  "description": "A TypeDoc theme inspired by rustdoc.",
   "main": "dist/index.js",
   "repository": "github:balthild/typedoc-theme-oxide",
   "author": "Balthild <ibalthild@gmail.com>",
