--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typedoc-theme-oxide",
   "version": "0.1.3",
-  "description": "A TypeDoc theme inspired by rustdoc.",
+  "description": "A TypeDoc theme looks just like rustdoc.",
   "main": "dist/index.js",
   "repository": "github:balthild/typedoc-theme-oxide",
   "author": "Balthild <ibalthild@gmail.com>",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^17.0.42",
     "clean-css": "^5.3.0",
+    "gh-pages": "^4.0.0",
     "typedoc": "^0.22.17",
     "typescript": "^4.7.3",
     "undici": "^5.5.1"
@@ -27,8 +28,8 @@
   },
   "scripts": {
     "build": "node scripts/retrieve-assets.js && rm -rf dist && tsc",
-    "predocs": "tsc",
-    "docs": "typedoc src --plugin ./dist/index.js --theme oxide --out docs",
+    "example": "cd example && typedoc --options ./typedoc.json",
+    "example-deploy": "gh-pages -d ./example/docs",
     "prepublishOnly": "yarn build"
   },
   "files": [
