--- a/package.json
+++ b/package.json
@@ -12,22 +12,11 @@
     "typedoc-theme",
     "typescript"
   ],
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.11"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.42",
-    "clean-css": "^5.3.0",
-    "gh-pages": "^4.0.0",
-    "typedoc": "^0.22.17",
-    "typescript": "^4.7.3",
-    "undici": "^5.5.1"
-  },
-  "peerDependencies": {
-    "typedoc": "^0.22.17"
-  },
   "scripts": {
-    "build": "node scripts/retrieve-assets.js && rm -rf dist && tsc",
+    "dev": "watchexec --restart --watch src 'yarn run build && yarn run example'",
+    "serve": "python3 -m http.server --directory ./example/docs",
+    "retrieve": "node scripts/retrieve-assets.js",
+    "build": "rm -rf dist && tsc",
     "example": "cd example && typedoc --options ./typedoc.json",
     "example-deploy": "gh-pages -d ./example/docs",
     "prepublishOnly": "yarn build"
@@ -35,5 +24,22 @@
   "files": [
     "dist",
     "assets"
-  ]
+  ],
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.11",
+    "node-html-parser": "^7.0.1",
+    "prettier": "^3.5.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.3",
+    "clean-css": "^5.3.0",
+    "gh-pages": "^6.3.0",
+    "typedoc": "^0.28.4",
+    "typescript": "^5.8.3",
+    "undici": "^7.8.0"
+  },
+  "peerDependencies": {
+    "typedoc": "^0.28.4"
+  },
+  "packageManager": "yarn@1.22.22"
 }
