--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,13 @@ assets/rustdoc
 
 # Dependency directories
 node_modules/
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Output of 'npm pack'
 *.tgz
