--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lit": "^3.3.0",
     "lodash-es": "^4.17.21",
     "postcss": "^8.5.3",
+    "postcss-nested": "^7.0.2",
     "release-it": "^19.0.2",
     "rollup": "^4.40.1",
     "rollup-plugin-postcss": "^4.0.2",
