--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "dist"
   ],
   "dependencies": {
-    "cheerio": "^1.0.0-rc.11",
-    "flexsearch": "^0.8.161",
+    "cheerio": "^1.0.0",
+    "flexsearch": "^0.8.164",
     "slug": "^10.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@types/lodash-es": "^4",
-    "@types/node": "^22.15.3",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.15.17",
     "@types/slug": "^5.0.9",
-    "clean-css": "^5.3.0",
+    "clean-css": "^5.3.3",
     "gh-pages": "^6.3.0",
     "http-server": "^14.1.1",
     "lit": "^3.3.0",
@@ -46,13 +46,13 @@
     "postcss": "^8.5.3",
     "postcss-nested": "^7.0.2",
     "release-it": "^19.0.2",
-    "rollup": "^4.40.1",
+    "rollup": "^4.40.2",
     "rollup-plugin-postcss": "^4.0.2",
     "terser": "^5.39.0",
     "tslib": "^2.8.1",
     "typedoc": "^0.28.4",
     "typescript": "^5.8.3",
-    "undici": "^7.8.0"
+    "undici": "^7.9.0"
   },
   "peerDependencies": {
     "typedoc": "^0.28.4"
