Remove duplicate titles for members

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "http-server": "^14.1.1",
     "lit": "^3.3.0",
     "lodash-es": "^4.17.21",
+    "monaco-editor": "^0.52.2",
     "postcss": "^8.5.3",
     "postcss-nested": "^7.0.2",
     "release-it": "^19.0.2",
