--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
-		"module": "CommonJS"
+		"module": "CommonJS",
+		"skipLibCheck": true,
 	},
-	"include": ["monaco.d.ts"],
-	"exclude": ["theme"]
+	"include": ["../node_modules/monaco-editor/esm/vs/editor/editor.api.d.ts"],
+	"exclude": ["theme"],
 }
