Prevent example items from being recognized external

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -3,6 +3,6 @@
 		"module": "CommonJS",
 		"skipLibCheck": true,
 	},
-	"include": ["../node_modules/monaco-editor/esm/vs/editor/editor.api.d.ts"],
+	"include": ["editor.api.d.ts"],
 	"exclude": ["theme"],
 }
