Auto build before publishing

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "example:prepare": "cp -f ./node_modules/monaco-editor/esm/vs/editor/editor.api.d.ts ./example/",
     "example:build": "yarn example:prepare && cd example && typedoc --options ./typedoc.json",
     "example:deploy": "yarn build && yarn example:build && gh-pages -d ./example/docs",
-    "release": "release-it"
+    "release": "release-it",
+    "prepublishOnly": "yarn build"
   },
   "packageManager": "yarn@4.9.1",
   "type": "module",
